Sun Sep 27 23:32:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_class, rb_define_class_id_under): refine
	  error messages.

	* class.c (rb_define_module, rb_define_module_id_under): ditto,
	  and make consistent with class.

Sun Sep 27 18:44:43 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: removed duplicated message.

Sun Sep 27 15:46:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): add an option to enable/disable
	  frozen-string-literal.  [Feature #8976]

	* compile.c (iseq_compile_each): override compile option by option
	  given by pragma.

	* iseq.c (rb_iseq_make_compile_option): extract a function to
	  overwrite rb_compile_option_t.

	* parse.y (parser_set_compile_option_flag): introduce pragma to
	  override compile options.

	* parse.y (magic_comments): new pragma "fronzen-string-literal".
	  [Feature #8976]

Sun Sep 27 08:16:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (delete_field): do not raise NameError for
	  existing keys.  [Fix GH-1033]

Sun Sep 27 00:34:31 2015  Zachary Scott  <zzak@ruby-lang.org>

        * lib/ostruct.rb: Move method definitions for getter/setter to be lazy
          Patch by @sferik in [GH-1033]: https://github.com/ruby/ruby/pull/1033

Fri Sep 25 10:07:25 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/http.rb: removed unused variable. It's removed at r13648.
	  [fix GH-1022] Patch by @nkondratyev

Fri Sep 25 09:48:27 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: upgrade to minitest-5.8.1

Fri Sep 25 09:47:12 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* id_table.c: fix typo. [ci skip][fix GH-1031] Patch @davydovanton

Fri Sep 25 07:54:05 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/gdbm/test_gdbm.rb (TestGDBM#test_s_open_lock): skip
	  this test on AIX. The issue is the same as on Solaris.
	  [ruby-dev:47631]

Thu Sep 24 17:25:09 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
